flashcards content + css grid

--- a/templates/about_us/sanjay.html
+++ b/templates/about_us/sanjay.html
@@ -69,13 +69,13 @@ Sanjay Bharadwaj
         .page-container {
             margin-left: 250px;
         }
-        a {
-            text-decoration: none;
-        }
-        a:hover {
-            color: midnightblue;
-            text-decoration: underline
-        }
+/*         a { */
+/*             text-decoration: none; */
+/*         } */
+/*         a:hover { */
+/*             color: midnightblue; */
+/*             text-decoration: underline */
+/*         } */
         .container {
             margin: 0 auto;
         }
@@ -121,6 +121,7 @@ Sanjay Bharadwaj
         section {
             width: 80%;
         }
+
     </style>
 
 {% endblock %}
