push changes to home page and images

--- a/templates/rohan.html
+++ b/templates/rohan.html
@@ -4,7 +4,7 @@
 <script>
     function BeanieToggle() {
         var img = document.getElementById("blackbeanie")
-        img.src =  "static/pizza.jpg"
+        img.src =  "static/rohanbrownbeanie.jpg"
         return false;
 }
 </script>
@@ -24,12 +24,12 @@
                 <input type="submit" value="press da button!" />
             </form>
         </div>
+        {outcome(0)}
         </br>
         <button onclick="BeanieToggle()">Brown Beanie</button>
         </br>
-        <img id="blackbeanie" src="static/rohanmask.jpg" width="1000" height="600">
+        <img id="blackbeanie" src="static/rohanblackbeanie.jpg" width="1000" height="600">
         </br>
-        <button onclick="Masktoggle()">Brown Beanie</button>
         <p>
             </br>
             <iframe
