funko pops + more temp removal

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -20,6 +20,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('index') }}>Portfolio</a>
             <a class="nav-link" href={{ url_for('pokemon_cards') }}>Pokemon Cards</a>
             <a class="nav-link" href={{ url_for('sports_cards') }}>Sports Cards</a>
+            <a class="nav-link" href={{ url_for('funko_pop') }}>Funko Pops</a>
         </div>
     </div>
 </nav>
