--- a/templates/brian.html
+++ b/templates/brian.html
@@ -2,7 +2,7 @@
 <!-- Extending the predefined project layout -->
 {% extends "layouts/base.html" %}
 
-{% set project = "Brian" %}
+{% set project = "Brian is so Cool" %}
 
 {% block body %}
     <!- Try building a new body here ->
