--- a/templates/rohan.html
+++ b/templates/rohan.html
@@ -1,5 +1,5 @@
 {% extends "layouts/base.html" %}
-{% set project = "Rohan" %}
+{% set project = "Rohan is so Cool" %}
 {% block body %}
 <script>
     function BeanieToggle() {
