--- a/templates/divya.html
+++ b/templates/divya.html
@@ -3,7 +3,7 @@
 {% extends "layouts/base.html" %}
 
 <!- This variable sets name of browser tab  -->
-{% set project = "Divya" %}
+{% set project = "Divya is so Cool" %}
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
