--- a/templates/jason.html
+++ b/templates/jason.html
@@ -1,7 +1,7 @@
 {% extends "layouts/base.html" %}
 
 <!- This variable sets name of browser tab  -->
-{% set project = "Jason" %}
+{% set project = "Jason is so Cool" %}
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
