made the subject pages and added them to sidebar

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -125,13 +125,13 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             border-radius: 20px;
             background-color: transparent;
             transition: all .5s;
-            outline: none
+            outline: none;
             color: #fed2b9;
             border: 2px solid #fed2b9
 
         }
         .button:hover {
-            background-color: #fed2b9
+            background-color: #fed2b9;
             color: #64483f*/
         }
         .row{
@@ -146,6 +146,9 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             overflow-x: hidden;
             padding-top: 20px;
             z-index: 0;
+        }
+        nav {
+            background-color: #ceb680;
         }
 
 
@@ -169,6 +172,23 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         <a href="/simon">Simon</a>
         <br>
         <a href="/sanjay">Sanjay</a>
+        <br>
+        <a href="/vunsh">Vunsh</a>
+        <br>
+        <br>
+        <a href="/apec">AP European History</a>
+        <br>
+        <a href="/apush">AP US History</a>
+        <br>
+        <a href="/biology">AP Biology</a>
+        <br>
+        <a href="/calcab">AP Calculus AB</a>
+        <br>
+        <a href="/chemistry">AP Chemistry</a>
+        <br>
+        <a href="/csp">AP Computer Science Principles</a>
+        <br>
+        <a href="/stats">AP Statistics</a>
     </div>
 
 </head>
