--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -28,6 +28,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
     }
 
 </style>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">{{basename}}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,18 +44,27 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         About Us
                     </a>
+
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/evan/">Evan</a>
-                        <a class="dropdown-item" href="/leah/">Leah</a>
-                        <a class="dropdown-item" href="/simon/">Simon</a>
-                        <a class="dropdown-item" href="/sanjay/">Sanjay</a>
+                        <a class="dropdown-item" href="/evan">Evan</a>
+                        <a class="dropdown-item" href="/leah">Leah</a>
+                        <a class="dropdown-item" href="/vunsh">Vunsh</a>
+                        <a class="dropdown-item" href="/sanjay">Sanjay</a>
+                        <a class="dropdown-item" href="/simon">Simon</a>
+                    </div>
                 </li>
             </ul>
 
             <a class="nav-link" href={{ url_for('index') }}>Portfolio</a>
             <a class="nav-link" href="/stub">Stub</a>
+
         </div>
     </div>
+    <style>
+        nav {
+            z-index: 2;
+            background-color: #ceb680;
+        }
+    </style>
 </nav>
-
 
