--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -14,6 +14,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('genius') }}>Genius API</a>
             <a class="nav-link" href={{ url_for('sonakshi') }}>Sonakshi</a>
             <a class="nav-link" href={{ url_for('khushi') }}>Khushi</a>
+            <a class="nav-link" href={{ url_for('shreya') }}>Shreya</a>
             <a class="nav-link" href={{ url_for('linda') }}>Linda</a>
 
 
