--- a/templates/connor.html
+++ b/templates/connor.html
@@ -29,7 +29,7 @@
 {%endblock%}
 {% block body %}
 
-<h1 class="text-center">Connor Home Page</h1>
+<h1 class="image">Connor Home Page</h1>
 <div class="image">
     <div class="row justify-content-md-center">
         <table class="table">
@@ -45,9 +45,13 @@
                     <div>
                         <button onclick="mask()">Mask</button>
                         <button onclick="nomask()">No Mask</button>
-                    </div>
+                        <p style="text-align:center" class="fs-2">
+                            <a href="https://docs.google.com/document/d/1yMnRk0cY8TWYl3YKTgz0OKkrI5Gac4pEyoyiffEeUoE/edit?usp=sharing"> Journal </a>
+                        </p>
                 </td>
             </tr>
+            </tr>
+            </tbody>
             </tbody>
         </table>
     </div>
