--- a/templates/funko_pop.html
+++ b/templates/funko_pop.html
@@ -1,11 +1,43 @@
-{% include "layouts/navbar.html" %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>About me: Ian</title>
 </head>
 <body>
 
 </body>
 </html>
+<header class='masthead'>
+  <p class='masthead-intro'>Welcome to the</p>
+  <h1 class='masthead-heading'>Funko Pop Catalog!</h1>
+</header>
+<section class="introduction-section">
+    <h1>WHAT IS A FUNKO POP?</h1>
+    <p>A funko pop is a vinyl figure of a figure from pop culture, some example are jurassic park, pokemon, star wars and more, they have different versions, sizes, etc.</p>
+    <p>Funko pops are meant to show joy to people and also allows people to represent and show appreciation to what they enjoy or passionate about, for example, you may love a certain tv show and you could collect those funko pop figures for that specific show. </p>
+</section>
+<section class="location-section">
+    <h1>HISTORY OF FUNKO POP</h1>
+    <p>Funko was invented in 1998 by Mike Becker, it started off with bobbleheads and then as the company progressed, it became bigger and bigger eventually till now where they have more than just bobbleheads, such as the main focus of this page, Funko pops, there are also pop! sodas, action figures, snapsies and more. </p>
+</section>
+<section class="questions-section">
+    <h2>{place holder}</h2>
+    <p>{place holder}</p>
+<footer class="content-footer">
+    <p>Places to shop for Funko Pops and more Funko related:</p>
+    <ul class="social">
+        <li><a class="css-is-deranged" href="https://www.funko.com/">Funko official website</a></li>
+        <li><a class="css-is-deranged" href="https://www.gamestop.com/">Gamestop</a></li>
+          <li><a class="css-is-deranged" href="https://www.target.com/">Target</a></li>
+  
+</footer>
+    
+    <html>
+   <head>
+      <title>HTML Backgorund Color</title>
+   </head>
+   <body style="background-color:orange;">
+   </body>
+</html>
+
