--- a/templates/LucasAboutMe.html
+++ b/templates/LucasAboutMe.html
@@ -1,11 +1,54 @@
 {% include "layouts/navbar.html" %}
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>About Me: Lucas Huang</title>
-</head>
+<html>
+<title>About Me: Lucas Huang</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
+<style>
+    body {font-family: "Raleway", Arial, sans-serif}
+    .w3-row img {margin-bottom: -8px}
+</style>
 <body>
 
+<!-- !PAGE CONTENT! -->
+<div class="w3-content" style="max-width:1500px">
+
+    <!-- Header -->
+    <header class="w3-container w3-xlarge w3-padding-24">
+        <a href="#" class="w3-left w3-button w3-white">My Pictures</a>
+        <a href="#about" class="w3-right w3-button w3-white">Bio</a>
+    </header>
+
+    <!-- Photo Grid -->
+    <div class="w3-row">
+        <div class="w3-half">
+            <img src="/w3images/streetart.jpg" style="width:100%">
+            <img src="/w3images/streetart2.jpg" style="width:100%">
+            <img src="/w3images/streetart5.jpg" style="width:100%">
+        </div>
+
+        <div class="w3-half">
+            <img src="/w3images/streetart3.jpg" style="width:100%">
+            <img src="/w3images/streetart4.jpg" style="width:100%">
+        </div>
+    </div>
+
+    <!-- End Page Content -->
+</div>
+
+<!-- Footer / About Section -->
+<footer class="w3-light-grey w3-padding-64 w3-center" id="about">
+    <h2>About Me</h2>
+    <img src="/w3images/boy.jpg" class="w3-image w3-padding-32" width="300" height="300">
+    <form style="margin:auto;width:60%" action="/action_page.php" target="_blank">
+        <p>Hi, welcome to my About Me page! My name is Lucas Huang, I am 17, and am a junior here at Del Norte Highschool. I am apart of Del Norte's NHS, Trail Note, Hack Club, and Team Pokeman. I love to play basketball and video games, and spend time hanging out with my friends and family.  </p>
+        <p class="w3-large w3-text-pink">My contact information:</p>
+        <div class="w3-section">
+            <label><b>Email:</b></label>
+            ljxover248@gmil.com
+            <br>
+</footer>
 </body>
 </html>
