--- a/templates/funko_pops.html
+++ b/templates/funko_pops.html
@@ -1,9 +1,8 @@
-{% include "layouts/navbar.html" %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About Me: Gavin</title>
+    <title>Funko Pops</title>
 </head>
 <body>
 
