--- a/templates/funko_pop.html
+++ b/templates/funko_pop.html
@@ -36,9 +36,9 @@
     
     <html>
    <head>
-      <title>HTML Backgorund Color</title>
+      <title>HTML Background Color</title>
    </head>
-   <body style="background-color:orange;">
+   <body style="background-color:#08457e;">
    </body>
 </html>
 
