--- a/templates/funko_pop.html
+++ b/templates/funko_pop.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About me: Ian</title>
+    <title>Funko Pops</title>
 </head>
 <body>
 
