nav bar hover underline

--- a/templates/flashcards.html
+++ b/templates/flashcards.html
@@ -6,6 +6,16 @@
   <title>Flashcards</title>
 </head>
 {% block body %}
+<script>
+    function reveal(answer,button,warning,warning2) {
+
+        document.getElementById(answer).style.display = "block";
+        document.getElementById(button).style.display = "none";
+        document.getElementById(warning2).style.display="none";
+        document.getElementById(warning).style.display="none";
+
+    }
+</script>
 <style>
     .page-container {
         margin-left: 250px;
@@ -18,11 +28,13 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-auto-rows: min-content;
-        grid-gap: 30px;
+        grid-gap: 50px;
         width: 95%;
     }
     .flashcard {
-        height: 300px;
+        height: 350px;
+        perspective: 1000px;
+
     }
     .flashcard-inner {
       position: relative;
@@ -31,12 +43,15 @@
       text-align: center;
       transition: transform 1.2s;
       transform-style: preserve-3d;
+      box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
     }
 
     .flashcard:hover .flashcard-inner {
       transform: rotateX(180deg);
     }
-
+    .card.is-flipped {
+      transform: rotateX(180deg);
+    }
     .flashcard-front, .flashcard-back {
       padding: 50px;
       position: absolute;
@@ -63,20 +78,33 @@
         font-size: 30px;
         text-transform: uppercase;
     }
+    #flip {
+        font-size: 15px;
+    }
+    .warning {
+        color: red;
+        font-size: 25px;
+    }
+    .answer {
+        display: none;
+    }
 </style>
 <div class="page-container">
 <h2> Flashcards <h2>
 <div class="flashcards-grid">
     {% for x in range(8) %}
-        <div class="flashcard">
-            <div id="card1" class="flashcard-inner">
+        <div id="flashcard{{x+1}}" class="flashcard">
+            <div id="card{{x+1}}" class="flashcard-inner">
                 <div class="flashcard-front">
                     <h2> front side of card {{x+1}}</h2>
                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu molestie nibh, quis accumsan urna. Praesent lorem felis, elementum scelerisque faucibus a, pharetra a purus. Morbi nisi purus, placerat at. </p>
                 </div>
-                <div class="flashcard-back">
+                <div class="flashcard-back card__face--back">
                     <h2> back side of card {{x+1}} </h2>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu molestie nibh, quis accumsan urna. Praesent lorem felis, elementum scelerisque faucibus a, pharetra a purus. Morbi nisi purus, placerat at. </p>
+                    <p class="warning" id="warning{{x+1}}">WARNING!!!!</p>
+                    <p class="warning" id="warning2{{x+1}}" style="font-size: 16px;">Do you want to reveal the answer?</p>
+                    <button class="btn" id="button{{x+1}}" onclick="reveal('answer{{x+1}}','button{{x+1}}','warning{{x+1}}','warning2{{x+1}}')">Reveal</button>
+                    <p class="answer" id="answer{{x+1}}"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu molestie nibh, quis accumsan urna. Praesent lorem felis, elementum scelerisque faucibus a, pharetra a purus. Morbi nisi purus, placerat at. </p>
                 </div>
             </div>
         </div>
