--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -28,11 +28,13 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
     }
 
 </style>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">{{basename}}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
@@ -55,6 +57,56 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href="/stub">Stub</a>
         </div>
     </div>
+
+    <div class="form-check form-switch">
+        <input type="checkbox" onclick="darkFunction()" class="form-check-input" id="darkSwitch">
+        <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+    </div>
+
+    <script>
+        // Dark Mode Control
+        // darkSwitch global element is set for convenience
+        const darkSwitch=document.getElementById("darkSwitch");
+        // establishes the initial state of darkSwitch on page load
+        if(darkSwitch) {
+            // obtains the value of darkSwitch from localStorage
+            const darkSwitchSelected =
+                localStorage.getItem("darkSwitch") !== null &&
+                localStorage.getItem("darkSwitch") === "dark";
+            // sets the value of darkSwitch.checked to the global darkSwitch
+            darkSwitch.checked=darkSwitchSelected;
+            // if dark-mode, toggle the switch to dark-mode position
+            if (darkSwitchSelected)
+                document.body.classList.toggle("dark-mode");
+        }
+        // executes on each "dark mode" UI toggle
+        function darkFunction() {
+            // toggles between off (standard CSS) and dark-mode (.dark-mode CSS)
+            document.body.classList.toggle("dark-mode");
+            // localStorage is used to manage darkSwitch status
+            darkSwitch.checked
+                ? localStorage.setItem("darkSwitch","dark")
+                : localStorage.removeItem("darkSwitch");
+        }
+        // End Dark Mode Control
+
+
+        // Clock Control
+        // clockElement global element set for convenience
+        let clockElement = document.getElementById('clock');
+        // Clock update executes on each interval set by timer
+        function clock() {
+            let date = new Date();
+            clockElement.textContent = date.toLocaleString();
+        }
+        // Clock refresh timer, a reoccurring event
+        setInterval(clock, 1000);
+        // End Clock Control
+    </script>
+
+
+
+
 </nav>
 
 
