--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -58,6 +58,8 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
         </div>
     </div>
 
+
+    <!-- The UnClickable darkmode button-->
     <div class="form-check form-switch">
         <input type="checkbox" onclick="darkFunction()" class="form-check-input" id="darkSwitch">
         <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
