--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -59,11 +59,20 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
     </div>
 
 
-    <!-- The UnClickable darkmode button-->
-    <div class="form-check form-switch">
-        <input type="checkbox" onclick="darkFunction()" class="form-check-input" id="darkSwitch">
-        <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+
+    <!--Whole Button Group-->
+    <div class="btn-group">
+        <!-- Clock display -->
+        <div class="px-3 text-dark">
+            <span id="clock">12/2/2021, 2:45:33 PM</span>
+        </div>
+        <!-- Dark mode action -->
+        <div class="form-check form-switch">
+            <input type="checkbox" onclick="darkFunction()" class="form-check-input" id="darkSwitch">
+            <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+        </div>
     </div>
+
 
     <script>
         // Dark Mode Control
