--- a/templates/khushi.html
+++ b/templates/khushi.html
@@ -40,18 +40,19 @@
 
 <br>
 <p> <!-- Reference from Linda -->
+    <img src="/static/assets/khushiimages/Khushi2.jpg" style="height: 400px; width: auto;" id="imgClickAndChange2"/>
     <img src="/static/assets/khushiimages/Khushi.jpg" style="height: 400px; width: auto;" id="imgClickAndChange" onclick="changeImage()"/>
 </p>
 <p style="font-size: large; font-family: Baskerville; text-align: center"><i>Click Me</i></p>
 
-<script> //reference from Shreya
+<script> //reference from Shreya and Sonakshi
    function changeImage() {
-       if (document.getElementById("imgClickAndChange").src ="/static/assets/khushiimages/Khushi.jpg")
-       {
-           document.getElementById("imgClickAndChange").src = "/static/assets/khushiimages/Khushi2.jpg";
+       if (document.getElementById("imgClickAndChange").src ="/static/assets/khushiimages/Khushi.jpg") {
+           document.getElementById("imgClickAndChange2").src = "/static/assets/khushiimages/Khushi2.jpg";
+       } else {
+          document.getElementById("imgClickAndChange").src = "/static/assets/khushiimages/Khushi.jpg";
        }
-
-   }
+            }
 </script>
 </div>
 </body>
