This is version 2.0 of the about us page but we still need to fix the positions

--- a/templates/mainabout.html
+++ b/templates/mainabout.html
@@ -31,45 +31,22 @@
 <body>
     <div class="col-0" style="margin: 3% 5% 2%" name="imgbox" id="imgbox">
     <table class="table">
-        tbody>
         <tr>
             <div class="content_img">
                 <input type="button" class="fa aboutUsImage" onclick="location.href = '/aboutnathan';">
                 <div>Nathan Manangan</div>
-            </div>
-
-        </tr>
-        <tr>
-            <div class="content_img">
                 <input type="button" class="fa aboutUsImage" onclick="location.href = '/aboutnathan';">
                 <div>Reem Ben Ishai</div>
-            </div>
-        </tr>
-        <tr>
-            <div class="content_img">
                 <input type="button" class="fa aboutUsImage" onclick="location.href = '/aboutnathan';">
-                <div>Nathan Manangan</div>
-            </div>
-        </tr>
-        <tr>
-            <div class="content_img">
+                <div>Daniel Bertino</div>
                 <input type="button" class="fa aboutUsImage" onclick="location.href = '/aboutnathan';">
-                <div>Nathan Manangan</div>
-            </div>
-        </tr>
-        <tr>
-            <div class="content_img">
+                <div>Jacob Rozenkrants</div>
                 <input type="button" class="fa aboutUsImage" onclick="location.href = '/aboutnathan';">
-                <div>Nathan Manangan</div>
+                <div>James Lee</div>
             </div>
         </tr>
-        </tbody>
     </table>
     </div>
 </body>
-    <style>
-
-    </style>
-    </div>
     </html>
 {% endblock %}
