added photo page to navbar

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -15,8 +15,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('jason') }}>Jason</a>
             <a class="nav-link" href={{ url_for('divya') }}>Divya</a>
             <a class="nav-link" href={{ url_for('brian') }}>Brian</a>
-            <!-- stub is shown using the name of the route -->
-            <a class="nav-link" href="/stub">Stub</a>
+            <a class="nav-link" href={{ url_for('photogallery') }}>Photography</a>
         </div>
     </div>
 </nav>
