Perfected perfection calculator

--- a/templates/about_us/simon.html
+++ b/templates/about_us/simon.html
@@ -108,7 +108,7 @@
 <!--Proof of Perfection-->
 <p style="position:relative;left:64%">How perfect is Simon?</p>
 
-<input style="position:relative;left:82%" id="id1" type="number" min="100" max="100" required>
+<input style="position:relative;left:82%" id="id1" type="number" min="100" max="1000" required>
 <button class="btn"  onclick="myFunction()" style="position:relative;left:82%"> % </button>
 
 <p style="position:relative;left:64%"> Hint he's perfect </p>
@@ -121,7 +121,7 @@
         if (!inpObj.checkValidity()) {
             document.getElementById("demo").innerHTML = inpObj.validationMessage;
         } else {
-            document.getElementById("demo").innerHTML = "Input OK";
+            document.getElementById("demo").innerHTML = "Correct he's perfection";
         }
     }
 </script>
