--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -68,8 +68,9 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
         </div>
         <!-- Dark mode action -->
         <div class="form-check form-switch">
-            <input type="checkbox" onclick="darkFunction()" class="form-check-input" id="darkSwitch">
-            <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+            <label class="custom-control-label" for="darkSwitch">
+                <input type="checkbox" onclick="darkFunction()" class="form-check-input" id="darkSwitch">
+                Dark Mode</label>
         </div>
     </div>
 
