--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -57,6 +57,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
 
             <a class="nav-link" href={{ url_for('index') }}>Portfolio</a>
             <a class="nav-link" href="/stub">Stub</a>
+            <a class="nav-link" href="/notes">Notes</a>
 
         </div>
     </div>
