--- a/templates/subjects/stats.html
+++ b/templates/subjects/stats.html
@@ -7,6 +7,8 @@
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
 
+    <button class="btn" onclick="location.href='http://www.mathguy.us/Handbooks/StatisticsHandbook.pdf';">notes</button>
+
     <script>
 
     </script>
