working on dark mode

--- a/templates/about_us/simon.html
+++ b/templates/about_us/simon.html
@@ -93,7 +93,7 @@
         " I am the solo Bass singer in our show choir Vocal Flight",
         "I objectively have the Best friends in the world!", "My friends are better than yours /hj",
         "I am better than you /j", "My favorite candy is Twix", "I'm having a friendsgiving at Denny's",
-        "My friends play d&d better than you","Happy Holidays","*merry noises",]
+        "My friends play d&d better than you","Happy Holidays","*merry noises","I am perfection","I am cooler than you","You wish you were me","hi :)"]
 
     up.innerHTML = "Click on the button to check "
         + "the type of element.<br><br>" + arr;
